--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -71,6 +71,7 @@ S_COCOA := \
 	DownloadWindowController.m \
 	NetSurfAppDelegate.m \
 	NetsurfApp.m \
+	PreferencesWindowController.m \
 	ScrollableView.m \
 	SearchWindowController.m \
 	URLFieldCell.m \
@@ -115,7 +116,7 @@ SOURCES := $(addprefix $(shell pwd)/,$(SOURCES))
 
 EXETARGET := NetSurf
 
-S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib
+S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib PreferencesWindow.xib
 
 R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns
 R_RESOURCES := $(addprefix cocoa/res/,$(R_RESOURCES))
