Factored Tree class out of TreeView
svn path=/trunk/netsurf/; revision=11577

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -74,6 +74,7 @@ S_COCOA := \
 	ScrollableView.m \
 	SearchWindowController.m \
 	URLFieldCell.m \
+	Tree.m \
 	TreeView.m \
 	HistoryView.m \
 	FormSelectMenu.m \
