Implemented global history window using new Tree class.
svn path=/trunk/netsurf/; revision=11578

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -77,6 +77,7 @@ S_COCOA := \
 	Tree.m \
 	TreeView.m \
 	HistoryView.m \
+	HistoryWindowController.m \
 	FormSelectMenu.m \
 	bitmap.m \
 	fetch.m \
@@ -116,7 +117,8 @@ SOURCES := $(addprefix $(shell pwd)/,$(SOURCES))
 
 EXETARGET := NetSurf
 
-S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib PreferencesWindow.xib
+S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib PreferencesWindow.xib \
+		HistoryWindow.xib
 
 R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns
 R_RESOURCES := $(addprefix cocoa/res/,$(R_RESOURCES))
