Implemented bookmarks menu.
svn path=/trunk/netsurf/; revision=11579

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -63,6 +63,7 @@ endif
 
 # S_COCOA are sources purely for the Mac OS X build
 S_COCOA := \
+	BookmarksController.m \
 	BrowserView.m \
 	BrowserViewController.m \
 	BrowserWindowController.m \
