Bookmarks window. No editing yet.
svn path=/trunk/netsurf/; revision=11581

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -119,7 +119,7 @@ SOURCES := $(addprefix $(shell pwd)/,$(SOURCES))
 EXETARGET := NetSurf
 
 S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib PreferencesWindow.xib \
-		HistoryWindow.xib
+		HistoryWindow.xib BookmarksWindow.xib
 
 R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns
 R_RESOURCES := $(addprefix cocoa/res/,$(R_RESOURCES))
