Define LIBXML_STATIC
svn path=/trunk/netsurf/; revision=11622

--- a/windows/Makefile.target
+++ b/windows/Makefile.target
@@ -32,7 +32,7 @@
   CFLAGS += '-DWINVER=0x0500'
   WSCFLAGS := -std=c99 \
 	$(WARNFLAGS) -I. -I${MINGW_INSTALL_ENV}/include/ \
-	-DCURL_STATICLIB -g
+	-DCURL_STATICLIB -DLIBXML_STATIC -g
   CFLAGS += $(WSCFLAGS)
   LDFLAGS += $(WSCFLAGS)
 
