Rationalise definition of NO_IPV6 for atari frontend
svn path=/trunk/netsurf/; revision=11623

--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -336,7 +336,7 @@ ifeq ($(TARGET),atari)
   NETSURF_ATARI_USE_FREETYPE := YES
 
   # Optimisation levels
-  CFLAGS += -m68000 -O2 -Wuninitialized -DNO_IPV6
+  CFLAGS += -m68000 -O2 -Wuninitialized
 
   WARNFLAGS = -W -Wundef -Wpointer-arith \
 		-Wcast-align -Wwrite-strings -Wstrict-prototypes \
