--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -5,7 +5,7 @@
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
-CFLAGS += -I/usr/GEM/include -DNO_IPV6
+CFLAGS += -I/usr/GEM/include
 LDFLAGS += -L/usr/GEM/lib -lcflib
 
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
