New icon for homepage button and tooltips for homepage and local history buttons.
svn path=/trunk/netsurf/; revision=11628

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -121,7 +121,7 @@ EXETARGET := NetSurf
 S_XIBS := MainMenu.xib Browser.xib BrowserWindow.xib DownloadWindow.xib SearchWindow.xib PreferencesWindow.xib \
 		HistoryWindow.xib BookmarksWindow.xib
 
-R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns
+R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns HomeTemplate.pdf
 R_RESOURCES := $(addprefix cocoa/res/,$(R_RESOURCES))
 
 LANGUAGES := de en fr it nl
