use the netsurf icons on the window decoration
svn path=/trunk/netsurf/; revision=11635

--- a/windows/res/resource.rc
+++ b/windows/res/resource.rc
@@ -221,4 +221,5 @@ FONT 8, "MS Sans Serif"
 //
 // Icon resources
 //
-ID                 ICON           "NetSurf32.ico"
+NSWS_ID_NETSURF32_ICON                 ICON           "NetSurf32.ico"
+NSWS_ID_NETSURF16_ICON                 ICON           "NetSurf16.ico"
