--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -253,16 +253,18 @@ ifeq ($(TARGET),framebuffer)
   NETSURF_FB_FONTLIB := internal
 
   # freetype compiled in font locations 
-  NETSURF_FB_FONT_SANS_SERIF := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSans.ttf
-  NETSURF_FB_FONT_SANS_SERIF_BOLD := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSans-Bold.ttf
-  NETSURF_FB_FONT_SANS_SERIF_ITALIC := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSans-Oblique.ttf
-  NETSURF_FB_FONT_SANS_SERIF_ITALIC_BOLD := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSans-BoldOblique.ttf
-  NETSURF_FB_FONT_SERIF := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSerif.ttf
-  NETSURF_FB_FONT_SERIF_BOLD := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSerif-Bold.ttf
-  NETSURF_FB_FONT_MONOSPACE := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSansMono.ttf
-  NETSURF_FB_FONT_MONOSPACE_BOLD := /usr/share/fonts/truetype/ttf-dejavu/DejaVuSansMono-Bold.ttf
-  NETSURF_FB_FONT_CURSIVE := /usr/share/fonts/truetype/msttcorefonts/Comic_Sans_MS.ttf
-  NETSURF_FB_FONT_FANTASY := /usr/share/fonts/truetype/msttcorefonts/Impact.ttf
+  NETSURF_FB_FONTPATH := /usr/share/fonts/truetype/ttf-dejavu:/usr/share/fonts/truetype/msttcorefonts
+
+  NETSURF_FB_FONT_SANS_SERIF := DejaVuSans.ttf
+  NETSURF_FB_FONT_SANS_SERIF_BOLD := DejaVuSans-Bold.ttf
+  NETSURF_FB_FONT_SANS_SERIF_ITALIC := DejaVuSans-Oblique.ttf
+  NETSURF_FB_FONT_SANS_SERIF_ITALIC_BOLD := DejaVuSans-BoldOblique.ttf
+  NETSURF_FB_FONT_SERIF := DejaVuSerif.ttf
+  NETSURF_FB_FONT_SERIF_BOLD := DejaVuSerif-Bold.ttf
+  NETSURF_FB_FONT_MONOSPACE := DejaVuSansMono.ttf
+  NETSURF_FB_FONT_MONOSPACE_BOLD := DejaVuSansMono-Bold.ttf
+  NETSURF_FB_FONT_CURSIVE := Comic_Sans_MS.ttf
+  NETSURF_FB_FONT_FANTASY := Impact.ttf
 
   # Framebuffer frontends may have differing root paths for resources
   # As such, these specify the resource path and config path.
