--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -129,7 +129,7 @@ R_RESOURCES := default.css adblock.css quirks.css NetSurf.icns HomeTemplate.pdf
 R_RESOURCES := $(addprefix cocoa/res/,$(R_RESOURCES))
 
 LANGUAGES := de en fr it nl
-LOCALIZED_RESOURCES := Messages
+LOCALIZED_RESOURCES := Messages Localizable.strings
 
 TABBAR_RESOURCES := AquaTabClose_Front_Pressed.png \
 	AquaTabClose_Front_Rollover.png \
