Created content handler CONTENT_APPLE_IMAGE for Mac OS X that can handle all image file formats supported by Apples ImageIO framework. Right now used only for JPEG to get rid of libjpeg dependency.
svn path=/trunk/netsurf/; revision=11911

--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -373,9 +373,11 @@ ifeq ($(TARGET),cocoa)
   NETSURF_USE_NSSVG := YES
   
   NETSURF_USE_MNG := NO
+  
+  NETSURF_USE_JPEG := NO
 
   # Optimisation levels
-  CFLAGS += -O2 -Wuninitialized
+  CFLAGS += -O2 -Wuninitialized -DWITH_APPLE_IMAGE
 
 endif
 
