--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -43,6 +43,7 @@
   $(eval $(call feature_enabled,GIF,-DWITH_GIF,-lnsgif,GIF (libnsgif)))
   $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
   $(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
+  $(eval $(call feature_enabled,IMAGEIO,-DWITH_APPLE_IMAGE,,Apple ImageIO       ))
 
   ifneq ($(UNIVERSAL),)
     UNIVERSAL_FLAGS := $(foreach arch,$(UNIVERSAL),-arch $(arch) )
