--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -2,7 +2,11 @@
 # Amiga target setup
 # ----------------------------------------------------------------------------
 
-CFLAGS += -std=c99 -I . -Dnsamiga -U__STRICT_ANSI__
+CFLAGS += -std=c99 -I . -Dnsamiga
+
+ifneq ($(SUBTARGET),os3)
+  CFLAGS += -U__STRICT_ANSI__ -D__USE_INLINE__ -D__USE_BASETYPE__
+endif
 
 NETSURF_FEATURE_ROSPRITE_CFLAGS := -DWITH_NSSPRITE
 NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
@@ -22,7 +26,7 @@ ifeq ($(HOST),amiga)
   $(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
   $(eval $(call feature_enabled,PLUGINS,-DWITH_PLUGIN,,DataTypes images))
 
-  CFLAGS += -D__USE_INLINE__ -D__USE_BASETYPE__ -I /SDK/local/common/include/libpng12
+  CFLAGS += -I /SDK/local/common/include/libpng12
   LDFLAGS += -lxml2 -lcurl -lrtmp -lpthread -lregex -lauto -lpbl
   LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet
 
@@ -45,7 +49,11 @@ else
 
   LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcares libcurl openssl)
   LDFLAGS += $(shell $(PKG_CONFIG) --libs tre libhubbub libcss)
-  LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib -liconv
+  LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
+
+  ifeq ($(SUBTARGET),os3)
+    LDFLAGS += -liconv
+  endif
 
   EXETARGET := NetSurf
 endif
