--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -44,15 +44,17 @@ else
   $(eval $(call pkg_config_find_and_add,NSSVG,libsvgtiny,NSSVG))
 
   CFLAGS += -I$(GCCSDK_INSTALL_ENV)/include
-  CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libcares libcurl openssl)
+  CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libcurl libcares openssl)
   CFLAGS += $(shell $(PKG_CONFIG) --cflags tre libhubbub libcss)
 
-  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcares libcurl openssl)
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcurl libcares openssl)
   LDFLAGS += $(shell $(PKG_CONFIG) --libs tre libhubbub libcss)
   LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
 
   ifeq ($(SUBTARGET),os3)
     LDFLAGS += -liconv
+  else
+    LDFLAGS += -lauto
   endif
 
   EXETARGET := NetSurf
