--- a/monkey/Makefile.target
+++ b/monkey/Makefile.target
@@ -57,7 +57,7 @@
 # S_MONKEY are sources purely for the MONKEY build
 S_MONKEY := main.c utils.c filetype.c schedule.c system_colour.c	\
             bitmap.c plot.c browser.c download.c thumbnail.c		\
-            401login.c cert.c font.c poll.c
+            401login.c cert.c font.c poll.c dispatch.c
 
 S_MONKEY := $(addprefix monkey/,$(S_MONKEY))
 
