--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -20,8 +20,8 @@
   # for timerisset()
   CFLAGS += -D_DARWIN_C_SOURCE
 
-  MACOSX_VERSION := 10.5
-  SDK_PATH := /Developer/SDKs/MacOSX$(MACOSX_VERSION).sdk
+  MACOSX_VERSION ?= 10.5
+  SDK_PATH ?= $(DEVELOPER_PATH)/SDKs/MacOSX$(MACOSX_VERSION).sdk
   SDK_FLAGS := -isysroot $(SDK_PATH) -mmacosx-version-min=$(MACOSX_VERSION) 
   CFLAGS :=  $(SDK_FLAGS) $(CFLAGS)
   LDFLAGS :=  $(SDK_FLAGS) -Wl,-syslibroot,$(SDK_PATH) $(LDFLAGS)
