Passing $(DEVELOPER_PATH) to the compile-xib script to select the right ibtool.
svn path=/trunk/netsurf/; revision=12048

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -158,7 +158,7 @@ $$(OBJROOT)/$(2).lproj: $$(OBJROOT)/$(2).lproj/$(1:.xib=.nib)
 $$(OBJROOT)/$(2).lproj/$(1:.xib=.nib): cocoa/res/$(1) $$(OBJROOT)/created
 	$(VQ)echo Compiling XIB $(1) for language $(2)
 	$(Q)mkdir -p $$(OBJROOT)/$(2).lproj
-	$(Q)cocoa/compile-xib.sh cocoa/res/$(1) $(2) $$@
+	$(Q)cocoa/compile-xib.sh $(DEVELOPER_PATH) cocoa/res/$(1) $(2) $$@
 	
 ifeq ($(wildcard cocoa/res/$(2).lproj/$(1).strings),cocoa/res/$(2).lproj/$(1).strings)
 $$(OBJROOT)/$(2).lproj/$(1:.xib=.nib): cocoa/res/$(2).lproj/$(1).strings
