Ensure all four required version defines are set for windows builds
svn path=/trunk/netsurf/; revision=12082

--- a/windows/Makefile.target
+++ b/windows/Makefile.target
@@ -28,8 +28,11 @@
 	     -lgdi32 -lcomctl32 -lws2_32 -lmsimg32 -mwindows
 
   CFLAGS += -U__STRICT_ANSI__ -mwin32
-  # only windows versions after 2000 are supported
-  CFLAGS += '-DWINVER=0x0500'
+  # only windows versions after XP are supported
+  CFLAGS += '-DWINVER=0x0501'
+  CFLAGS += '-D_WIN32_WINNT=0x0501'
+  CFLAGS += '-D_WIN32_WINDOWS=0x0501'
+  CFLAGS += '-D_WIN32_IE=0x0501'
   WSCFLAGS := -std=c99 \
 	$(WARNFLAGS) -I. -I${MINGW_INSTALL_ENV}/include/ \
 	-DCURL_STATICLIB -DLIBXML_STATIC -g
