--- a/Makefile.sources
+++ b/Makefile.sources
@@ -15,7 +15,7 @@ S_RENDER := box.c box_construct.c box_normalise.c favicon.c 		\
 	hubbub_binding.c imagemap.c layout.c list.c table.c textplain.c
 
 S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
-	talloc.c url.c utf8.c utils.c useragent.c resource.c log.c
+	talloc.c url.c utf8.c utils.c useragent.c filepath.c log.c
 
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c options.c plot_style.c print.c search.c searchweb.c	\
