Try encouraging the auto-build of testament a little harder
svn path=/trunk/netsurf/; revision=12122

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -46,7 +46,7 @@ S_BROWSER := browser.c download.c frames.c history_core.c netsurf.c	\
 S_BROWSER := $(addprefix desktop/,$(S_BROWSER))
 
 # The following files depend on the testament
-content/fetchers/about.c: testament
+content/fetchers/about.c: testament utils/testament.h
 
 # Some extra rules for building the transliteration table.
 ifeq ($(HOST),riscos)
