--- a/windows/res/resource.rc
+++ b/windows/res/resource.rc
@@ -5,8 +5,7 @@
 #include "../resourceid.h"
 
 
-IDR_NETSURF32_ICON ICON DISCARDABLE "NetSurf32.ico"
-IDR_NETSURF16_ICON ICON DISCARDABLE "NetSurf16.ico"
+IDR_NETSURF_ICON ICON DISCARDABLE "NetSurf.ico"
 IDR_TOOLBAR_BITMAP BITMAP DISCARDABLE "toolbar.bmp"
 IDR_TOOLBAR_BITMAP_GREY BITMAP DISCARDABLE "toolbarg.bmp"
 IDR_TOOLBAR_BITMAP_HOT BITMAP DISCARDABLE "toolbarh.bmp"
@@ -118,15 +117,15 @@ BEGIN
   END
 END
 
-IDD_DLG_ABOUT DIALOGEX 10,10,309,180
+IDD_DLG_ABOUT DIALOGEX 10,10,206,180
 CAPTION "About NetSurf"
 FONT 8,"MS Sans Serif",0,0,0
 STYLE WS_VISIBLE|WS_CAPTION|WS_SYSMENU
 EXSTYLE WS_EX_DLGMODALFRAME
 BEGIN
-  CONTROL IDR_NETSURF_BANNER,IDC_IMG1,"Static",SS_BITMAP,0,0,308,86
-  CONTROL "",IDC_ABOUT_CONTENT,"Static",WS_CHILDWINDOW|WS_VISIBLE,10,93,288,63
-  CONTROL "&OK",IDOK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,246,160,54,15
+  CONTROL IDR_NETSURF_BANNER,IDC_IMG1,"Static",SS_BITMAP|0x40L /*SS_REALSIZECONTROL*/,0,0,205,53
+  CONTROL "",IDC_ABOUT_CONTENT,"Static",WS_CHILDWINDOW|WS_VISIBLE,10,60,185,63
+  CONTROL "&OK",IDOK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,143,160,54,15
   CONTROL "&Credits",IDC_BTN_CREDITS,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,10,160,54,15
   CONTROL "&Licence",IDC_BTN_LICENCE,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,70,160,54,15
 END
