make windows about window functional make url bar font more acceptable
svn path=/trunk/netsurf/; revision=12131

--- a/windows/res/resource.rc
+++ b/windows/res/resource.rc
@@ -92,9 +92,9 @@ BEGIN
   END
   POPUP "&Help"
   BEGIN
-    MENUITEM "&Contents",IDM_HELP_CONTENTS,GRAYED
-    MENUITEM "G&uide",IDM_HELP_GUIDE,GRAYED
-    MENUITEM "&Info",IDM_HELP_INFO,GRAYED
+    MENUITEM "&Contents",IDM_HELP_CONTENTS
+    MENUITEM "G&uide",IDM_HELP_GUIDE
+    MENUITEM "&Info",IDM_HELP_INFO
     MENUITEM SEPARATOR
     MENUITEM "&About NetSurf",IDM_HELP_ABOUT
   END
@@ -117,17 +117,19 @@ BEGIN
   END
 END
 
-IDD_DLG_ABOUT DIALOGEX 10,10,206,180
+IDD_DLG_ABOUT DIALOGEX 10,10,206,133
 CAPTION "About NetSurf"
 FONT 8,"MS Sans Serif",0,0,0
 STYLE WS_VISIBLE|WS_CAPTION|WS_SYSMENU
 EXSTYLE WS_EX_DLGMODALFRAME
 BEGIN
   CONTROL IDR_NETSURF_BANNER,IDC_IMG1,"Static",SS_BITMAP|0x40L /*SS_REALSIZECONTROL*/,0,0,205,53
-  CONTROL "",IDC_ABOUT_CONTENT,"Static",WS_CHILDWINDOW|WS_VISIBLE,10,60,185,63
-  CONTROL "&OK",IDOK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,143,160,54,15
-  CONTROL "&Credits",IDC_BTN_CREDITS,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,10,160,54,15
-  CONTROL "&Licence",IDC_BTN_LICENCE,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,70,160,54,15
+  CONTROL "NetSurf",IDC_ABOUT_VERSION,"Static",SS_LEFT,10,60,185,16
+  CONTROL "NetSurf is a small fast browser",IDC_ABOUT_TEXT,"Static",SS_LEFT,10,83,185,8
+  CONTROL "Copyright 2003-2011 The NetSurf Developers",IDC_ABOUT_COPYRIGHT,"Static",SS_LEFT,10,96,185,8
+  CONTROL "&OK",IDOK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,143,111,54,15
+  CONTROL "&Credits",IDC_BTN_CREDITS,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,10,111,54,15
+  CONTROL "&Licence",IDC_BTN_LICENCE,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,70,111,54,15
 END
 
 IDD_DLG_DOWNLOAD DIALOGEX 0,0,201,84
