make windows frontend use
svn path=/trunk/netsurf/; revision=12146

--- a/windows/Makefile.target
+++ b/windows/Makefile.target
@@ -33,6 +33,11 @@
   CFLAGS += '-D_WIN32_WINNT=0x0501'
   CFLAGS += '-D_WIN32_WINDOWS=0x0501'
   CFLAGS += '-D_WIN32_IE=0x0501'
+
+ #installed resource path
+ CFLAGS += '-DNETSURF_WINDOWS_RESPATH="$(NETSURF_WINDOWS_RESPATH)"'
+
+
   WSCFLAGS := -std=c99 \
 	$(WARNFLAGS) -I. -I${MINGW_INSTALL_ENV}/include/ \
 	-DCURL_STATICLIB -DLIBXML_STATIC -g
