--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -220,9 +220,13 @@ ifeq ($(TARGET),amiga)
   # Valid options: YES, NO, AUTO
   NETSURF_USE_ROSPRITE := YES
 
+  # Enable NetSurf's use of libmng for displaying MNGs, JNGs and PNGs
+  # Valid options: YES, NO	  (at least one of PNG/MNG/DT highly recommended)
+  NETSURF_USE_MNG := NO
+
   # Enable NetSurf's use of libwebp for displaying WebPs
   # Valid options: YES, NO
-  NETSURF_USE_WEBP := YES
+  NETSURF_USE_WEBP := NO
 
   # Enable NetSurf to display Amiga icons 
   # Valid options: YES, NO                 (recommended)
@@ -230,7 +234,7 @@ ifeq ($(TARGET),amiga)
 
   # Enable NetSurf's use of DataTypes for unknown filetypes
   # Valid options: YES, NO
-  NETSURF_USE_PLUGINS := YES
+  NETSURF_USE_AMIGA_DATATYPES := YES
 
   # Enable NetSurf's use of libsvgtiny for displaying SVGs
   # (NB: Requires NETSURF_AMIGA_USE_CAIRO)
