When passed WITH_MACPORTS to make, add /opt/local/{include,lib} to the search paths for Cocoa builds.
svn path=/trunk/netsurf/; revision=12286

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -17,6 +17,11 @@
   # shut up zconf.h and zlib.h
   #CFLAGS += -D_LARGEFILE64_SOURCE=1
 
+ifneq ($(WITH_MACPORTS),)
+  LDFLAGS += -L/opt/local/lib
+  CFLAGS += -I/opt/local/include
+endif
+
   # for timerisset()
   CFLAGS += -D_DARWIN_C_SOURCE
 
