Registering all image types NSBitmapImageRep can load and using ImageIO instead of other image libraries by default.
Regression: animated GIF doesn’t work anymore.

svn path=/trunk/netsurf/; revision=12350

--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -396,7 +396,9 @@ ifeq ($(TARGET),cocoa)
   NETSURF_USE_NSSVG := YES
   
   NETSURF_USE_MNG := NO
-  
+  NETSURF_USE_BMP := NO
+  NETSURF_USE_GIF := NO
+  NETSURF_USE_PNG := NO
   NETSURF_USE_JPEG := NO
   NETSURF_USE_IMAGEIO := YES
 
