OSX: Always empty the Resources folder in the .app bundle when populating it, to avoid errors when copying .svn stuff over a 2nd time. Ideally those shouldn't be copied over anyway, but I didn't yet find an easy way to use tar the way I need.
svn path=/trunk/netsurf/; revision=12353

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -182,6 +182,7 @@ NetSurf.app: NetSurf cocoa/Makefile.target $(R_RESOURCES) NetSurf.app/Contents/I
 	$(VQ)echo Assembling NetSurf.app bundle
 	$(Q)mkdir -p NetSurf.app/Contents/MacOS
 	$(Q)cp NetSurf NetSurf.app/Contents/MacOS
+	$(Q)rm -rf NetSurf.app/Contents/Resources
 	$(Q)mkdir -p NetSurf.app/Contents/Resources
 	$(Q)cp -pLR $(R_RESOURCES) NetSurf.app/Contents/Resources
 	$(Q)echo 'APPL????' > NetSurf.app/Contents/PkgInfo
