--- a/Makefile.sources
+++ b/Makefile.sources
@@ -20,7 +20,7 @@ S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
 
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c options.c plot_style.c print.c search.c searchweb.c	\
-	scroll.c sslcert.c textarea.c thumbnail.c tree.c		\
+	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c		\
 	tree_url_node.c version.c
 
 # S_COMMON are sources common to all builds
