Add a redirecting fetcher for the doi: URI scheme. Not much used but just in case...
svn path=/trunk/netsurf/; revision=12412

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -7,7 +7,7 @@
 S_CONTENT := content.c content_factory.c dirlist.c fetch.c hlcache.c	\
 	llcache.c urldb.c
 
-S_FETCHERS := curl.c data.c file.c about.c resource.c
+S_FETCHERS := curl.c data.c doi.c file.c about.c resource.c
 
 S_CSS := css.c dump.c internal.c select.c utils.c
 
