--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -5,10 +5,8 @@
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
-LDFLAGS += -lcflib
-
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
-LDFLAGS += $(shell freetype-config --libs)
+LDFLAGS += -lfreetype
  
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
 NETSURF_FEATURE_RSVG_CFLAGS := -DWITH_RSVG
@@ -16,10 +14,11 @@ NETSURF_FEATURE_HUBBUB_CFLAGS := -DWITH_HUBBUB
 NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
 NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
 
+#LDFLAGS += -lnsbmp -lnsgif
 $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
 $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
  
-CFLAGS += -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
+CFLAGS += -U__STRICT_ANSI__ -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
 		-D_BSD_SOURCE \
 		-D_XOPEN_SOURCE=600 \
 		-D_POSIX_C_SOURCE=200112L \
@@ -27,9 +26,10 @@ CFLAGS += -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
 		$(shell xml2-config --cflags) \
 		$(shell curl-config --cflags)
  
-LDFLAGS += $(shell curl-config --libs)
-LDFLAGS += $(shell $(PKG_CONFIG) --libs libhubbub openssl libcss)
-LDFLAGS += -L/usr/lib/ -lxml2 -lz -lHermes -liconv -L/usr/lib -lwindom -lgem -lm  
+LDFLAGS += -lcurl  
+LDFLAGS += -lhubbub -lcss -lparserutils -lwapcaplet 
+LDFLAGS += -lssl -lcrypto
+LDFLAGS += -lxml2 -lz -liconv -lHermes -lwindom -lgem -lm  
 
 
 # S_ATARI are sources purely for the Atari FreeMiNT build
@@ -39,7 +39,8 @@ S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
 	plot/font_vdi.c plot/font_freetype.c plot/font_internal.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
-	global_evnt.c osspec.c dragdrop.c system_colour.c
+	global_evnt.c osspec.c dragdrop.c system_colour.c \
+	nkccgc.c nkcc.s
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
 
