--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -6,7 +6,7 @@ $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
-LDFLAGS += -lfreetype
+LDFLAGS += -lcflib -lfreetype
  
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
 NETSURF_FEATURE_RSVG_CFLAGS := -DWITH_RSVG
@@ -39,8 +39,7 @@ S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
 	plot/font_vdi.c plot/font_freetype.c plot/font_internal.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
-	global_evnt.c osspec.c dragdrop.c system_colour.c \
-	nkccgc.c nkcc.s
+	global_evnt.c osspec.c dragdrop.c system_colour.c
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
 
