--- a/Makefile.sources
+++ b/Makefile.sources
@@ -16,8 +16,11 @@ S_RENDER := box.c box_construct.c box_normalise.c			\
 	hubbub_binding.c imagemap.c layout.c list.c table.c textinput.c	\
 	textplain.c
 
-S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
+S_UTILS := base64.c filename.c hashtable.c locale.c messages.c 		\
 	talloc.c url.c utf8.c utils.c useragent.c filepath.c log.c
+
+S_HTTP := challenge.c generics.c primitives.c parameter.c		\
+	content-disposition.c content-type.c www-authenticate.c
 
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c options.c plot_style.c print.c search.c searchweb.c	\
@@ -30,6 +33,7 @@ S_COMMON := $(addprefix content/,$(S_CONTENT))				\
 	$(addprefix css/,$(S_CSS))					\
 	$(addprefix render/,$(S_RENDER))				\
 	$(addprefix utils/,$(S_UTILS))					\
+	$(addprefix utils/http/,$(S_HTTP))				\
 	$(addprefix desktop/,$(S_DESKTOP))
 
 # S_IMAGE are sources related to image management
