--- a/Makefile.sources
+++ b/Makefile.sources
@@ -13,8 +13,8 @@ S_CSS := css.c dump.c internal.c select.c utils.c
 
 S_RENDER := box.c box_construct.c box_normalise.c			\
 	font.c form.c html.c html_interaction.c html_redraw.c		\
-	hubbub_binding.c imagemap.c layout.c list.c table.c textinput.c	\
-	textplain.c
+	hubbub_binding.c imagemap.c layout.c list.c search.c table.c	\
+	textinput.c textplain.c
 
 S_UTILS := base64.c filename.c hashtable.c locale.c messages.c 		\
 	talloc.c url.c utf8.c utils.c useragent.c filepath.c log.c
